{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 38,
  "lineage": "084039a1-b74b-6423-28cf-faf107c99f3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c4a2c14e2b2da11d",
            "association_id": "eipassoc-03f15982da44dbd97",
            "domain": "vpc",
            "id": "eipalloc-0c4a2c14e2b2da11d",
            "instance": "i-0a003c8cb8fbf0d2d",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0a08492734a5fb415",
            "private_dns": "ip-10-0-62-131.us-west-2.compute.internal",
            "private_ip": "10.0.62.131",
            "public_dns": "ec2-44-226-61-143.us-west-2.compute.amazonaws.com",
            "public_ip": "44.226.61.143",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.vm-web",
            "aws_key_pair.mykey",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d593311db5abb72b",
            "arn": "arn:aws:ec2:us-west-2:945543648876:instance/i-0a003c8cb8fbf0d2d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a003c8cb8fbf0d2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a08492734a5fb415",
            "private_dns": "ip-10-0-62-131.us-west-2.compute.internal",
            "private_ip": "10.0.62.131",
            "public_dns": "ec2-35-91-133-83.us-west-2.compute.amazonaws.com",
            "public_ip": "35.91.133.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc684227826959e7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eff5a069160a7283"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0760f583e9a419dda",
            "tags": {
              "Env": "dev",
              "Name": "server for Test"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "server for Test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eff5a069160a7283"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykey",
            "aws_security_group.ingress-all-test",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945543648876:internet-gateway/igw-0e21c645be41136f7",
            "id": "igw-0e21c645be41136f7",
            "owner_id": "945543648876",
            "tags": {
              "Name": "test-env-gw"
            },
            "tags_all": {
              "Name": "test-env-gw"
            },
            "vpc_id": "vpc-0bb028730750984bf"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945543648876:route-table/rtb-0bff064659894d2a0",
            "id": "rtb-0bff064659894d2a0",
            "owner_id": "945543648876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e21c645be41136f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-env-route-table"
            },
            "tags_all": {
              "Name": "test-env-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb028730750984bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ef12b4d37422e4e",
            "route_table_id": "rtb-0bff064659894d2a0",
            "subnet_id": "subnet-0760f583e9a419dda"
          },
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-uno",
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-all-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945543648876:security-group/sg-0eff5a069160a7283",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eff5a069160a7283",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8005,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8005
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "allow-all-sg",
            "name_prefix": "",
            "owner_id": "945543648876",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb028730750984bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-uno",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945543648876:subnet/subnet-0760f583e9a419dda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0760f583e9a419dda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945543648876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bb028730750984bf"
          },
          "dependencies": [
            "aws_vpc.test-env"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:945543648876:vpc/vpc-0bb028730750984bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070a776c542a9fe60",
            "default_route_table_id": "rtb-085261c41906b1c6d",
            "default_security_group_id": "sg-067242212901a1f34",
            "dhcp_options_id": "dopt-065b1013e490a7cbb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bb028730750984bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-085261c41906b1c6d",
            "owner_id": "945543648876",
            "tags": {
              "Name": "test-env"
            },
            "tags_all": {
              "Name": "test-env"
            }
          }
        }
      ]
    }
  ]
}